시큐리티 설정 멤버 관련만 설정 함